src/Theme.css
.theme-light *,
.theme-dark * {
  transition: background-color 0s !important;
}

body .theme-dark {
  color: #e1e1e1;
}

.theme-dark .color-important {
  color: #fff !important;
}

.theme-light .ant-layout-header {
  background: #fff;
}

.theme-light .sub-header {
  background: #fff;
  border-top: solid 1px #f0f0f0;
}

.theme-dark .sub-header {
  color: #e1e1e1;
  background: #1e1e1e;
  border-color: #1e1e1e;
}

.theme-dark .ant-typography {
  color: #e1e1e1;
}

.ant-menu {
  background: transparent !important;
}

.theme-dark .ant-dropdown-menu,
.theme-dark .ant-menu-submenu-popup {
  -webkit-box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.48),
    0 6px 16px 0 rgba(0, 0, 0, 0.32), 0 9px 28px 8px rgba(0, 0, 0, 0.2);
  box-shadow: 0 3px 6px -4px rgba(0, 0, 0, 0.48),
    0 6px 16px 0 rgba(0, 0, 0, 0.32), 0 9px 28px 8px rgba(0, 0, 0, 0.2);
  -webkit-transform: translate3d(0, 0, 0);
}

.ant-menu-light {
  background: #fff;
}

.theme-dark .ant-layout-header {
  background: #121212;
}

.theme-dark .ant-menu {
  color: #e1e1e1;
  background: #1e1e1e;
}

.theme-dark .ant-menu.ant-menu-sub {
  /* color: #e1e1e1; */
  background: #1e1e1e !important;
}

.theme-dark .ant-input {
  background-color: transparent !important;
}

.theme-dark .ant-input-suffix svg {
  color: #e1e1e1;
}

.theme-dark .ant-input-search {
  background-color: #1e1e1e;
  border-color: #1e1e1e;
}

.theme-dark .ant-dropdown-menu {
  background-color: #1f1f1f;
}

.theme-dark .ant-dropdown-menu-item:hover,
.theme-dark .ant-dropdown-menu-submenu-title:hover {
  background-color: rgba(255, 255, 255, 0.08);
}

.theme-dark .ant-input {
  color: #e1e1e1;
}

.theme-dark.ant-layout {
  background-color: #121212;
}

.theme-dark .ant-card {
  background: #1e1e1e;
}

.theme-dark .ant-card-head {
  color: #e1e1e1;
  border-color: #1e1e1e;
}

.theme-dark .ant-card-extra {
  color: #e1e1e1;
}

.theme-dark .ant-card.ant-card-bordered {
  border-color: #1e1e1e;
}

.theme-dark .ant-statistic-title {
  color: #a5a5a5;
}

.theme-dark .ant-statistic-content {
  color: #e1e1e1;
}

.theme-dark .color-normal {
  color: #e1e1e1 !important;
}

.theme-dark .ant-layout-footer {
  background: #121212;
  color: #e1e1e1;
}

.theme-dark .ant-timeline-item-tail {
  border-color: gray !important;
}

.theme-dark .ant-card-body,
.theme-dark .ant-slider-mark-text {
  color: #e1e1e1 !important;
}

.theme-dark .ant-skeleton.ant-skeleton-active {
  opacity: 0.25;
}

.theme-dark .ant-descriptions {
  color: #e1e1e1;
}

.theme-dark .ant-descriptions-bordered .ant-descriptions-item-label {
  color: #e1e1e1;
  background: #1e1e1e;
  border-color: #1e1e1e;
}

.theme-dark .ant-descriptions-item-content {
  color: #e1e1e1;
}

.theme-dark .ant-descriptions-bordered .ant-descriptions-view {
  border-color: #1e1e1e;
}

.theme-dark .ant-descriptions-bordered .ant-descriptions-row {
  border-color: #1e1e1e;
}

.theme-dark .ant-table thead > tr > th {
  color: #e1e1e1;
  background: #1e1e1e !important;
  border-color: #1e1e1e;
}

.theme-dark .ant-table .ant-table-cell {
  color: #e1e1e1;
  background: #1e1e1e !important;
  border-color: #1e1e1e;
}

/* Wait until className works on popover and dropdown */
.theme-dark .ant-popover-inner {
  background-color: #1f1f1f;
}

.theme-dark
  .ant-table-tbody
  > tr:hover:not(.ant-table-expanded-row):not(.ant-table-row-selected)
  > td {
  background: #1e1e1e !important;
}

.theme-dark .ant-table-footer {
  background: #1e1e1e !important;
}

.theme-dark .ant-pagination-item-active {
  background-color: transparent;
}

.theme-dark .ant-pagination-prev a,
.theme-dark .ant-pagination-next a,
.theme-dark .ant-pagination-item a {
  color: #e1e1e1;
}

.theme-dark .ant-pagination-item-active a {
  color: #1890ff;
}

.theme-dark .ant-pagination-disabled .ant-pagination-item-link,
.theme-dark .ant-pagination-disabled a {
  color: gray !important;
}

.theme-dark .ant-empty-description {
  color: gray;
}

.theme-dark .ant-empty-img-default-ellipse {
  fill-opacity: 0.08;
  fill: #fff;
}
.theme-dark .ant-empty-img-default-path-1 {
  fill: #262626;
}
.theme-dark .ant-empty-img-default-path-2 {
  fill: url(#linearGradient-1);
}
.theme-dark .ant-empty-img-default-path-3 {
  fill: #595959;
}
.theme-dark .ant-empty-img-default-path-4 {
  fill: #434343;
}
.theme-dark .ant-empty-img-default-path-5 {
  fill: #595959;
}
.theme-dark .ant-empty-img-default-g {
  fill: #434343;
}
.theme-dark .ant-empty-img-simple-ellipse {
  fill: #fff;
  fill-opacity: 0.08;
}
.theme-dark .ant-empty-img-simple-g {
  stroke: #434343;
}
.theme-dark .ant-empty-img-simple-path {
  fill: #262626;
  stroke: #434343;
}

.theme-dark .transaction-card .ant-row:not(:last-child) {
  border-color: #2f2f2f;
}

.theme-dark .ant-tag.tag-send {
  color: #fff;
  border-color: #e04576;
  background-color: #e04576 !important;
}

